# tpro

./: CMakeLists.txt  ExitOne.h  Menu.cpp  Menu.h  Play.h  README.md  escape.h  exit.h  exitConfirmation.h  gameOver.h  global.h  latsgo.cpp  latsgoOne.cpp  latsgoWithBot.cpp  lose.h  main.cpp  menuDuo.h  name.cpp  nastr.cpp  nastr.h  options.h  player.cpp  player.h  qwe.h  settings.h  win.h
duo-play/: MainCode.cpp  player.cpp
include/: Game.h  Map.h  menu.cpp  menu.h
src/: Game.cpp  Map.cpp
